additional height for landing design to prevent header from showing on mobile landing page

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -15,7 +15,7 @@
 }
 
 .landing {
-    height: 710px;
+    height: 800px;
     width: 100%;
     background-color: #fff;
     display: flex;
